# alt-right-formations

./: .gitignore  LICENSE  README.md  config.yaml  environment.yml  pyproject.toml
analysis/: 01_process_txt.py  process_txt.py  queries.yaml  timeline_plots_interactive.py  timeline_plots_static.py
analysis/plots/: activity_timeline_noretweets.html  names_timeline.html  sets_timeline.html  tf_barplot.html  tf_barplot_noretweets.html  tokens_timeline.html  tweet_freq_timeline.html  tweet_freq_timeline_noretweets.html
data_collection/: collect_tweets.py
