[tool.poetry]
name = "alt-right-formations"
version = "0.1.0"
description = ""
authors = ["Matias Piqueras", "Karl Ekeman", "Maria Skeppstedt"]
readme = "README.md"
packages = [{include = "alt_right_formations"}]

[tool.poetry.dependencies]
python = "^3.10"
tweepy = "^4.12.0"
pydantic = "^1.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
