[tool.poetry]
name = "alt-right-formations"
version = "0.1.0"
description = ""
license = "MIT"
authors = ["Matias Piqueras", "Karl Ekeman", "Maria Skeppstedt"]
readme = "README.md"
packages = [{include = "alt_right_formations"}]

[tool.poetry.dependencies]
python = "^3.10"
tweepy = "^4.12.0"
tqdm = "^4.64.1"
pyyaml = "^6.0"
pandas = "^1.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
